[package]
name = "cg263748"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
dashu = "0.3"
rayon = "1"

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
quickcheck = "1"

[[bench]]
name = "bench"
harness = false